@@ -108,7 +108,7 @@ ta[\'ca-nstab-category\'] = new Array(\'c\',\'View the category page\');',
 'edithelppage' => '{{ns:project}}:Улшăнусене кĕртме пулăшакан пулăшу',
 'unblocklogentry' => '«$1» блокировкăран кăларнă',
 'rclinks' => 'Юлашки $2 кун хушшинче тунă $1 улшăнусене кăтартмалла<br />$3',
-'linktrail' => '/^(([a-zа-я]|ĕ|ç|ă|ӳ|"|»)+)(.*)$/sD',
+'linktrail' => '/^([a-zа-яĕçăӳ"»]+)(.*)$/sDu',
 'delete_and_move' => 'Кăларса пăрахса куçарасси',
 '1movedto2' => '$1 $2 çине куçарнă',
 'mainpage' => 'Тĕп страницă',
